k8s/apps/network/speedtest/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  namespace: speedtest
  labels:
    app.kubernetes.io/name: speedtest
    app.kubernetes.io/instance: speedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: speedtest
      app.kubernetes.io/instance: speedtest
  template:
    metadata:
      labels:
        app.kubernetes.io/name: speedtest
        app.kubernetes.io/instance: speedtest
    spec:
      containers:
        - name: speedtest
          image: docker.io/adolfintel/speedtest:latest
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              memory: 64Mi
