k8s/apps/network/speedtest/svc.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  namespace: speedtest
  labels:
    app.kubernetes.io/name: speedtest
    app.kubernetes.io/instance: speedtest
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: speedtest
    app.kubernetes.io/instance: speedtest
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
